<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_foodBanner"
            android:layout_width="0dp"
            android:layout_height="200dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/foodbanner"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            />



        <LinearLayout
            app:layout_constraintStart_toStartOf="@id/siv_foodBanner"
            app:layout_constraintTop_toTopOf="@id/siv_foodBanner"
            app:layout_constraintEnd_toEndOf="@id/siv_foodBanner"
            app:layout_constraintBottom_toBottomOf="@id/siv_foodBanner"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:textSize="80sp"
                android:text="@string/sta"/>

            <TextView
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textSize="80sp"
                android:text="@string/eats"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"

            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/siv_foodBanner"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:background="@color/white"
            app:startIconDrawable="@drawable/profileicon"
            app:boxStrokeColor="@color/primary"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email_com"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"

            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/til_email"
            app:layout_constraintEnd_toEndOf="@id/til_email"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxCornerRadiusTopEnd="10dp"

            android:background="@color/white"
            app:startIconDrawable="@drawable/lock"
            app:endIconDrawable="@drawable/eye_on"
            app:endIconMode="password_toggle"
            app:passwordToggleDrawable="@drawable/eye_on"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/primary"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/password"
                android:paddingStart="45dp"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"

            app:layout_constraintTop_toBottomOf="@id/til_password"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="@id/til_password"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"

            android:text="@string/login"
            android:textSize="25sp"
            android:elevation="15dp"
            android:stateListAnimator="@null"/>

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/secondary" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_or"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_or"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            android:layout_marginEnd="40dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_or"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            android:layout_marginStart="25dp"
            />

        <Button
            android:id="@+id/btn_loginbygoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:elevation="15dp"
            android:stateListAnimator="@null"
            android:drawableLeft="@drawable/googleicon"
            android:text="@string/login_with_google"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_tac1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_loginbygoogle"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/btn_loginbygoogle"
            app:layout_constraintEnd_toEndOf="@id/btn_loginbygoogle"
            android:text="@string/by_continuing_you_agree_to_our"
            android:textAlignment="center"
            android:paddingHorizontal="40dp"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>